spade-tests/src/snapshots/spade_tests__linear_check__using_a_single_linear_field_does_not_use_the_whole_struct.snap
---
source: spade-tests/src/linear_check.rs
---
struct port A {
    a: inv &bool,
    b: inv &bool,
}
entity x(a: A) -> inv &bool {
    a.a
}


error: a.b is unused
  ┌─ testinput:5:10
  │
5 │ entity x(a: A) -> inv &bool {
  │          ^ a.b is unused
  │
  = note: a.b is an inverted wire (`inv &`) which must be set
